# Astraia-Engine

./: .gitignore  CMakeLists.txt  README.md  Test.cpp
Astraia/: CMakeLists.txt  Test.cpp  Test.h  main.cpp
Astraia/Sandbox/: main.cpp
Astraia/src/: Basic.h
Astraia/src/Basic/: Application.cpp  Application.h  Core.h  EntryPoint.h
Editor/: ExampleLayer.cpp  ExampleLayer.h  Sandbox.cpp  Sandbox2D.h  main.cpp
Editor/Assets/Scenes/: Template.scene  Untitled
Editor/Resource/Shaders/: FlatColor.glsl  Texture.glsl
Editor/Source/: main.cpp
Editor/Source/Core/: EditorLayer.cpp  EditorLayer.h
Editor/Source/Sandbox/: ExampleLayer.cpp  ExampleLayer.h  Sandbox.cpp  Sandbox2D.cpp
Runtime/: Basic.h  Engine.h  Header.cpp  Header.h
Runtime/Basic/: Application.cpp  Application.h  Core.h  EntryPoint.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Window.h  hzpch.cpp  hzpch.h
Runtime/Basic/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Runtime/Basic/IMGUI/: ImGuiLayer.cpp  ImGuiLayer.h
Runtime/Basic/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp
Runtime/Basic/Platform/Windows/: MacWindow.cpp  MacWindow.h
Runtime/Platform/MacOS/: MacInput.cpp  MacInput.h  MacPlatformUtils.cpp  MacWindow.cpp  MacWindow.h
Runtime/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Runtime/Source/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Shader.cpp  Shader.h  Timestep.h  Window.cpp  Window.h
Runtime/Source/Debug/: Instrumentor.h
Runtime/Source/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Runtime/Source/GUI/: ImGuiLayer.cpp  ImGuiLayer.h
Runtime/Source/Math/: Math.cpp  Math.h
Runtime/Source/Panel/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Runtime/Source/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Runtime/Source/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Runtime/Source/Utils/: PlatformUtils.h
Sandbox/: main.cpp
